src/objects/PHQ_9T__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipLabel>aPHQ 9Ts</relationshipLabel>
        <relationshipName>aPHQ_9Ts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PHQ9T_Ever_tried_to_kill_yourself__c</fullName>
        <label>PHQ9T Ever tried to kill your</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ9T_Sad_most_days_of_the_past_year__c</fullName>
        <label>PHQ9T Sad most days of the past year</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ9T_Suicidal_thought_in_last_month__c</fullName>
        <label>PHQ9T Suicidal thought in last month</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_9_Flag__c</fullName>
        <formula>Score_Summary__c &gt; 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PHQ-9 Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PHQ_Feel_bad_about_yourself__c</fullName>
        <label>PHQ Feel bad about yourself?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Feeling_depressed__c</fullName>
        <label>PHQ Feeling depressed?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Hard_to_function_based_on_above__c</fullName>
        <label>PHQ Hard to function based on above?</label>
        <picklist>
            <picklistValues>
                <fullName>Not difficult at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely difficult</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Little_interest_doing_things__c</fullName>
        <label>PHQ Little interest doing things?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Moving_or_speaking_slow_or_fast__c</fullName>
        <label>PHQ Moving or speaking slow or fast</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Poor_appetite_or_overeating__c</fullName>
        <label>PHQ Poor appetite or overeating?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Sleep_trouble__c</fullName>
        <label>PHQ Sleep trouble?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Thoughts_of_self_harm__c</fullName>
        <label>PHQ Thoughts of self-harm?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Tired_or_lack_energy__c</fullName>
        <label>PHQ Tired or lack energy?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Trouble_concentrating__c</fullName>
        <label>PHQ Trouble concentrating?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <formula>if (isNull (Score_Summary__c), &quot;&quot;, 
if ( Score_Summary__c &gt;= 20, 
&quot;Severe depression&quot;, if( Score_Summary__c &gt;= 15, 
&quot;Moderately severe depression&quot;, 
if( Score_Summary__c &gt;= 10, 
&quot;Moderate depression&quot;, 
if(Score_Summary__c &gt;= 5, 
&quot;Mild depression&quot;, &quot;Minimal depression&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Summary__c</fullName>
        <description>calculated on save: assessmentSource -&gt; totalScorePHQ_teen
because long expression for formula</description>
        <label>Score Summary</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Notes__c</fullName>
        <label>Survey Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>aPHQ 9T</label>
    <nameField>
        <label>aPHQ 9T Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aPHQ 9Ts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>